            - The new permission  "worldofzombies.command.get"  has been added for this command
            - This command includes dynamic tab completion based on the active custom blocks from the most recent plugin reload
            - If the item doesn't have the required custom block NBT tags, they will be added to the item automatically
        - Added a MultiBlockChange packet listener with same functionality as existing BlockChange packet listener
        - Added an error message when a duplicate custom block ID definition is detected
        - Custom block definition yaml files are now ONLY loaded on startup and  /woz reload  to increase performance
        - Added a check in BlockChange and MultiBlockChange packets so that blocks will only be disguised if they match the  "actual-data"  in the block's definition
            - If  "actual-block"  is null, this check will be skipped
        - More details for all new custom block features can be found in the file  WorldOfZombies\CustomItems\demo.yml
        - Improved "item" custom block drop tag to include anything in the Material class
        - Added functionality to calculate which custom blocks will drop items based on the "yield" of explosions
        - Added functionality to calculate custom block drops for blocks that break because from explosions
            - Added  "options.blast-resistant"  to not break in explosions
        - Added piston event functionality (push and pull)
            - Added  "options.cancel-piston-push"  ,  "options.cancel-piston-pull"  , and  "options.piston-breakable"

    Changes:
        - Replaced all "_" in block definition tags with "-"
            - MAKE SURE TO CHANGE TAG NAMES IN YOUR DEFINITIONS OR ELSE CUSTOM BLOCKS WILL NOT WORK
            - For example,  "actual_block"  is now  "actual-block"
        - Renamed the file  WorldOfZombies\custom_block.yml  to  WorldOfZombies\custom-block.yml  (replaced "_" with "-")