@@ -9,7 +9,7 @@
 
     <groupId>me.woz.customplugins</groupId>
     <artifactId>WorldOfZombies</artifactId>
-    <version>1.1.3</version> <!-- LATEST ADDITION: piston event handling, MBC packet listener -->
+    <version>1.1.3</version> <!-- LATEST ADDITION: piston event handling, MBC packet listener, "get" and "item nbt" commands -->
 
     <build>
         <plugins>
